liste infos need to repare

--- a/src/main/resources/templates/adresse-new.html
+++ b/src/main/resources/templates/adresse-new.html
@@ -59,6 +59,11 @@
             <span th:text="${Adresseipadd}"></span>
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
+        <div th:if="${Adresseipformat}" class="alert alert-warning alert-dismissible fade show" role="alert">
+            <i class="bi bi-check-circle me-1"></i>
+            <span th:text="${Adresseipformat}"></span>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
         <div th:if="${Adresseipexist}" class="alert alert-danger alert-dismissible fade show" role="alert">
             <i class="bi bi-check-circle me-1"></i>
             <span th:text="${Adresseipexist}"></span>
