--- a/src/main/resources/templates/adresse-list.html
+++ b/src/main/resources/templates/adresse-list.html
@@ -72,13 +72,10 @@
                         <table class="table text-center">
                             <thead class="text-center">
                             <tr>
+                                <th scope="col">Désignation</th>
                                 <th scope="col">Adresse IP</th>
-                                <th scope="col">Adresse MAC</th>
-                                <th scope="col">Materiel</th>
                                 <th scope="col">Responsable</th>
-                                <th scope="col">Service</th>
                                 <th scope="col">Temporaire</th>
-                                <th scope="col">Division</th>
                                 <th scope="col">Organe</th>
                                 <th scope="col">Résaux</th>
                                 <th scope="col">Actions</th>
@@ -86,23 +83,53 @@
                             </thead>
                             <tbody>
                             <tr th:each="adress : ${adressPage.content}">
+                                <td th:text="${adress.designation}"></td>
                                 <td th:text="${adress.ip}"></td>
-                                <td th:text="${adress.mac}"></td>
-                                <td th:text="${adress.materiel}"></td>
                                 <td th:text="${adress.responsable}"></td>
-                                <td th:text="${adress.service}"></td>
                                 <td th:if="${adress.temporaire == true}" th:text="Oui"></td>
                                 <td th:if="${adress.temporaire == false}" th:text="Non"></td>
-                                <td th:text="${adress.division.designation}"></td>
                                 <td th:text="${adress.organe.nom}"></td>
                                 <td th:text="${adress.resaux.nom}"></td>
                                 <td>
-                                    <button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#editModal"
-                                            th:attr="data-id=${adress.id}, data-designation=${adress.ip}">
-                                        <i class="bi bi-pencil-fill"></i>
-                                    </button>
+                                    <div class="dropdown">
+                                        <a href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false"><i class="bi bi-three-dots-vertical"></i></a>
+                                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                                            <li><a href="#" class="dropdown-item" data-bs-toggle="modal" data-bs-target="#detailsModal" data-vm-id="${adress.id}" data-vm-designation="${adress.designation}">Détails</a></li>
+                                            <li><a class="dropdown-item" href="">Editer</a></li>
+                                            <li><a class="dropdown-item" >Supprimer</a></li>
+                                        </ul>
+                                    </div>
                                 </td>
+                                <div id="detailsModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="standard-modalLabel" aria-hidden="true">
+                                    <div class="modal-dialog">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h4 class="modal-title" id="standard-modalLabel">Détails Adresse IP</h4>
+                                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                            </div>
+                                            <div class="modal-body">
+                                                <div class="row mb-3">
+                                                    <label class="col-sm-2 col-form-label">MAC</label>
+                                                    <div class="col-sm-10">
+                                                        <input type="text" class="form-control" disabled>
+                                                    </div>
+                                                </div>
+                                                <div class="row mb-3">
+                                                    <label class="col-sm-2 col-form-label">Text</label>
+                                                    <div class="col-sm-10">
+                                                        <input type="text" class="form-control">
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Close</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </tr>
+
+
                             </tbody>
                         </table>
 
