--- a/src/main/resources/templates/shared/sidebar.html
+++ b/src/main/resources/templates/shared/sidebar.html
@@ -224,8 +224,8 @@
                         </a>
                     </li>
                     <li>
-                        <a href="/adressage/liste" th:classappend="${#request.requestURI == '/adressage/liste'} ? 'active'">
-                            <i class="bi bi-circle"></i><span>Liste Des Adresses</span>
+                        <a href="/adressage/liste/internet" th:classappend="${#request.requestURI == '/adressage/liste/internet'} ? 'active'">
+                            <i class="bi bi-circle"></i><span>Adresses Internet</span>
                         </a>
                     </li>
                 </ul>
