insptrans tree fixed

--- a/src/main/resources/templates/shared/sidebar.html
+++ b/src/main/resources/templates/shared/sidebar.html
@@ -233,6 +233,11 @@
                             <i class="bi bi-circle"></i><span>Adresses Intranet</span>
                         </a>
                     </li>
+                    <li>
+                        <a href="/organe/adresses" th:classappend="${#request.requestURI == '/organe/adresses'} ? 'active'">
+                            <i class="bi bi-circle"></i><span>Schéma Insp. Trans</span>
+                        </a>
+                    </li>
                 </ul>
             </li>
 
