--- a/src/main/resources/templates/licence-new.html
+++ b/src/main/resources/templates/licence-new.html
@@ -79,9 +79,15 @@
                                 </div>
                             </div>
                             <div class="row mb-3">
-                                <label  class="col-sm-2 col-form-label">Reference</label>
+                                <label  class="col-sm-2 col-form-label">Prestataire</label>
                                 <div class="col-sm-10">
                                     <input type="text" id="reference" th:field="*{reference}" class="form-control" >
+                                </div>
+                            </div>
+                            <div class="row mb-3">
+                                <label  class="col-sm-2 col-form-label">Exercice</label>
+                                <div class="col-sm-10">
+                                    <input class="form-control" th:field="*{exercice}" type="number" min="2020" max="9999" step="1"/>
                                 </div>
                             </div>
                             <div class="row mb-3">
