--- a/src/main/resources/templates/poste-details.html
+++ b/src/main/resources/templates/poste-details.html
@@ -1,38 +1,115 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <title>Poste Details</title>
-</head>
-<body>
-<h1>Poste Details</h1>
-<div>
-    <h2>Poste Information</h2>
-    <p><strong>Name:</strong> <span th:text="${poste.nom}"></span></p>
-    <p><strong>IP Address:</strong> <span th:text="${poste.adresseip}"></span></p>
-    <p><strong>MAC Address:</strong> <span th:text="${poste.mac}"></span></p>
-    <p><strong>Type:</strong> <span th:text="${poste.typevsat}"></span></p>
-    <p><strong>Latitude:</strong> <span th:text="${poste.latitude}"></span></p>
-    <p><strong>Longitude:</strong> <span th:text="${poste.longitude}"></span></p>
-</div>
+<html lang="en">
 
-<div>
-    <h2>Articles</h2>
-    <table border="1">
-        <thead>
-        <tr>
-            <th>ID</th>
-            <th>Libelle</th>
-            <th>Status</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="article : ${articles}">
-            <td th:text="${article.id}"></td>
-            <td th:text="${article.libelle}"></td>
-            <td th:text="${article.status ? 'Active' : 'Inactive'}"></td>
-        </tr>
-        </tbody>
-    </table>
-</div>
+<head>
+    <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+
+    <title>Détails du poste Vsat - Application Materiel</title>
+    <meta content="" name="description">
+    <meta content="" name="keywords">
+
+    <!-- Favicons -->
+    <link href="/assets/img/favicon.png" rel="icon">
+    <link href="/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+
+    <!-- Google Fonts -->
+    <link href="https://fonts.gstatic.com" rel="preconnect">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+
+    <!-- Vendor CSS Files -->
+    <link href="/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+    <link href="/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+    <link href="/assets/vendor/quill/quill.snow.css" rel="stylesheet">
+    <link href="/assets/vendor/quill/quill.bubble.css" rel="stylesheet">
+    <link href="/assets/vendor/remixicon/remixicon.css" rel="stylesheet">
+    <link href="/assets/vendor/simple-datatables/style.css" rel="stylesheet">
+
+    <!-- Template Main CSS File -->
+    <link href="/assets/css/style.css" rel="stylesheet">
+
+</head>
+
+<body>
+
+<!-- ======= Header ======= -->
+<div th:replace="shared/header :: header"></div>
+
+<!-- ======= Sidebar ======= -->
+<div th:replace="shared/sidebar :: sidebar"></div>
+
+<main id="main" class="main">
+
+    <div class="pagetitle">
+        <h1>Schéma Adressage Insp. Trans</h1>
+        <nav>
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="/">Acceuil</a></li>
+                <li class="breadcrumb-item active">Schéma Adressage Insp. Trans</li>
+            </ol>
+        </nav>
+    </div><!-- End Page Title -->
+
+    <section class="section dashboard">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="card">
+                    <div class="card-body">
+                        <p><strong>Name:</strong> <span th:text="${poste.nom}"></span></p>
+                        <p><strong>IP Address:</strong> <span th:text="${poste.adresseip}"></span></p>
+                        <p><strong>MAC Address:</strong> <span th:text="${poste.mac}"></span></p>
+                        <p><strong>Type:</strong> <span th:text="${poste.typevsat}"></span></p>
+                        <p><strong>Latitude:</strong> <span th:text="${poste.latitude}"></span></p>
+                        <p><strong>Longitude:</strong> <span th:text="${poste.longitude}"></span></p>
+
+
+                    </div>
+
+                    <div>
+                        <h2>Articles</h2>
+                        <table border="1">
+                            <thead>
+                            <tr>
+                                <th>ID</th>
+                                <th>Libelle</th>
+                                <th>Status</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr th:each="article : ${articles}">
+                                <td th:text="${article.id}"></td>
+                                <td th:text="${article.libelle}"></td>
+                                <td th:text="${article.status ? 'Active' : 'Inactive'}"></td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+</main><!-- End #main -->
+
+<!-- ======= Footer ======= -->
+<div th:replace="shared/footer :: footer"></div>
+<!-- End Footer -->
+
+<a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+
+<!-- Vendor JS Files -->
+<script src="/assets/vendor/apexcharts/apexcharts.min.js"></script>
+<script src="/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="/assets/vendor/chart.js/chart.umd.js"></script>
+<script src="/assets/vendor/quill/quill.js"></script>
+<script src="/assets/vendor/simple-datatables/simple-datatables.js"></script>
+<script src="/assets/vendor/tinymce/tinymce.min.js"></script>
+<script src="/assets/vendor/php-email-form/validate.js"></script>
+
+<!-- Template Main JS File -->
+<script src="/assets/js/main.js"></script>
+
 </body>
+
 </html>
